k8s/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: otus-istio
  labels:
    istio-injection: enabled # Включаем инжект сайдкаров Istio для неймспейса
