k8s/app-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
        - name: app-v1
          image: rimskiy/istio-app:v1
          resources:
            requests:
              cpu: 0.1
              memory: 200
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32101
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: app
    version: v1
