k8s/app-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v2
  template:
    metadata:
      labels:
        app: app
        version: v2
    spec:
      containers:
        - name: app-v2
          image: rimskiy/istio-app:v2
          resources:
            requests:
              cpu: 0.1
              memory: 200
---
apiVersion: v1
kind: Service
metadata:
  name: app-v2
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 32102
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: app
    version: v2
